Fix Skill sheet description size and other item sheet issues. Replaced item header fields with flexrows (grid caused some layout problems). Spell Mercurial Magic and Description now both resize if necessary. Closes #143.

--- a/styles/dcc.css
+++ b/styles/dcc.css
@@ -1099,13 +1099,19 @@
 .dcc.item .sheet-body.spell {
   display: grid;
   grid-template-columns: 3fr 1fr 2fr;
-  grid-template-rows: 60px 50px minmax(80px, auto) 50px 80px; }
+  grid-template-rows: 60px 50px minmax(80px, auto) 50px minmax(80px, auto); }
 
 .dcc.item .sheet-body.treasure {
   width: 100%;
   display: grid;
   grid-template-columns: 100%;
   grid-template-rows: 85px 50px minmax(80px, auto); }
+
+.dcc.item .sheet-body.skill {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: 50px minmax(80px, auto); }
 
 .dcc.item .value-row {
   height: 150px;
